--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     <div class="top-bar">
       <div class="top-bar-left">
         <ul class="menu">
-          <li class="menu-text agilephd">AgilePhD</li>
+          <li class="menu-text agilephd">Welcome to my lair...</li>
         </ul>
       </div>
       <div class="top-bar-right">
         <ul class="menu">
-          <li><a data-open="contactModal">Contact</a></li>
+          <li><a data-open="contactModal">Contact me!</a></li>
         </ul>
       </div>
     </div>
@@ -28,7 +28,7 @@
 
     <div class="callout large scrum">
       <div class="row column text-center bottom">
-        <h1 class="scrum_h1 bottom">Organizational Change Through Agile Methods</h1>
+        <h1 class="scrum_h1 bottom">Tyler's Lair Where Doom Befalls All</h1>
       </div>
     </div>
 
