--- a/index.html
+++ b/index.html
@@ -176,13 +176,13 @@
     <div class="reveal" id="contactModal" data-reveal>
       <h4>Contact information</h4>
       <ul class="no-bullet">
-        <li>Dr. James Davis, PhD, PMP, CSP, CSM</li>
+        <li>Tyler Besse</li>
         <li>
-          <a href="mailto:james@agilephd.com?Subject=AgilePhD" target="_top">
-            james@agilephd.com
+          <a href="mailto:tcbesse3@gmail.com?Subject=AgilePhD" target="_top">
+            tcbesse3@gmail.com
           </a>
         </li>
-        <li><a href="tel:+12258920230">+1.225.892.0230</a></li>
+        <li><a href="tel:+19855193559">+1.985.519.3559</a></li>
       </ul>
       <button class="close-button" data-close aria-label="Close modal" type="button">
         <span aria-hidden="true">&times;</span>
