added first section

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <div class="callout large scrum">
       <div class="row column text-center bottom">
-        <h1 class="scrum_h1 bottom">Tyler's Lair Where Doom Befalls All</h1>
+        <h1 class="scrum_h1 bottom">Tyler's Lair of Doom, Destruction, and a Third Evil Word</h1>
       </div>
     </div>
 
@@ -38,11 +38,11 @@
           src="https://s3.amazonaws.com/agilephd/project_management.jpg">
       </div>
       <div class="medium-6 columns medium-pull-6">
-        <h2>Agile Project Management</h2>
+        <h2>The Channel</h2>
         <p>
-          As an experienced agile project manager, AgilePhD is the niche provider
-          clients seek out when they are looking to implement business-enhancing,
-          agile PMO services that improve project and portfolio performance.
+          My youtube channel, <a href="https://www.youtube.com/@darn_tyler" target="_blank">Darn Tyler</a>, is among the most influential 
+          and powerful in the world. My reach is potent. My strength is 
+          unquestionable. Below are some of my prime achievements.
         </p>
 
       </div>
@@ -50,27 +50,30 @@
 
     <div class="row">
       <div class="medium-4 columns">
-        <h3>Project Management</h3>
+        <h3>The Views</h3>
         <p>
-          Speed is what companies want as they adopt Agile. Traditional
-          plan-driven methodologies like Waterfall make a lot of up front
-          assumptions and leave no flexibility to adapt to the changing
-          needs of the customer.
+          My youtube channel <a href="https://www.youtube.com/@darn_tyler" target="_blank">Darn Tyler</a>'s popularity is uncomparable to any 
+          other. It sports &lt;1,000,000,000 views and &lt;4,000,000 subscribers, 
+          respectively. Go ahead and ask anyone on the street about me and they 
+          will tell you, either with admiration or fear, that I rule the website.
         </p>
       </div>
       <div class="medium-4 columns">
-        <h3>Software Development</h3>
+        <h3>The Videos</h3>
         <p>
-          It's all about that MVP (minimally viable product) and getting
-          it in front of your customers.  I love building technology products.  
+          My youtube channel, <a href="https://www.youtube.com/@darn_tyler" target="_blank">Darn Tyler</a>, has a wide variety of videos.
+          A wise man once said, "Darn Tyler has more content than TV!"
+          -No Idea.<br>
+          If you want a video about a microwave, watch <a href="https://youtu.be/msGdpZL0B1Y?feature=shared" target="_blank">I got a microwave</a>.<br>
+          Looking for a AAAAA film? Look no further than <a href="https://youtu.be/Q_S610niTRg?feature=shared" target="_blank">Thief</a>.<br>
+          Christmas special that also prooves that the Earth is flat?
+          <a href="https://youtu.be/EiUL7hooOcE?feature=shared" target="_blank">Tryanno-Silver</a>. The video. Watch it.
         </p>
       </div>
       <div class="medium-4 columns">
-        <h3>Cloud Services</h3>
+        <h3>The Impact</h3>
         <p>
-          As an early adopter several cloud technologies, AgilePhD can
-          help you develop a scalable solutions allowing you to focus
-          on your core business.
+          I own the world. <a href="https://www.youtube.com/@darn_tyler" target="_blank">Darn Tyler</a>
         </p>
       </div>
     </div>
@@ -80,13 +83,13 @@
     <div class="row column">
       <ul class="vertical medium-horizontal menu expanded text-center">
         <li>
-          <a href="#"><div class="stat">600+</div><span>Students Trained</span></a>
+          <a href="#"><div class="stat">12/29/03</div><span>Date of Birth</span></a>
         </li>
         <li>
-          <a href="#"><div class="stat">20+</div><span>Web App Projects</span></a>
+          <a href="#"><div class="stat">7/28/42</div><span>Random Date</span></a>
         </li>
         <li>
-          <a href="#"><div class="stat">12+</div><span>Mobile App Projects</span></a>
+          <a href="#"><div class="stat">9/10/24</div><span>When I found out how to make this website work</span></a>
         </li>
       </ul>
     </div>
@@ -94,7 +97,7 @@
     <hr>
 
     <div class="row column">
-      <h3>Recent Web Apps</h3>
+      <h3>Some Cool Gifs</h3>
     </div>
 
     <div class="row medium-up-3 ">
@@ -176,7 +179,7 @@
     <div class="reveal" id="contactModal" data-reveal>
       <h4>Contact information</h4>
       <ul class="no-bullet">
-        <li>Tyler Besse</li>
+        <li>Tyler Charles Besse</li>
         <li>
           <a href="mailto:tcbesse3@gmail.com?Subject=AgilePhD" target="_top">
             tcbesse3@gmail.com
