added baby face

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Tyler's Website</title>
     <link rel="stylesheet"
       href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
-    <link rel="stylesheet" href="https://s3.amazonaws.com/agilephd/styles/main.css">
+    <link rel="stylesheet" href="centerphoto.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   </head>
   <body>
@@ -35,7 +35,7 @@
     <div class="row">
       <div class="medium-6 columns medium-push-6">
         <img class="thumbnail pm_image"
-          src="https://s3.amazonaws.com/agilephd/project_management.jpg">
+          src="pictures/me.jpg" alt="A photo of me. I feel bad for you. Wish you could see it.">
       </div>
       <div class="medium-6 columns medium-pull-6">
         <h2>The Channel</h2>
