--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tyler's Website</title>
+    <title>Tyler's Lair</title>
+    <link rel="icon" href="pictures/mesmall.png" type="image/png">
     <link rel="stylesheet"
       href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
     <link rel="stylesheet" href="centerphoto.css">
@@ -28,7 +29,7 @@
 
     <div class="callout large scrum">
       <div class="row column text-center bottom">
-        <h1 class="scrum_h1 bottom">Tyler's Lair of Doom, Destruction, and a Third Evil Word</h1>
+        <h1 class="scrum_h1 bottom">Tyler's Lair of Doom, Destruction, and Other Evil Words</h1>
       </div>
     </div>
 
@@ -38,7 +39,7 @@
           src="pictures/me.jpg" alt="A photo of me. I feel bad for you. Wish you could see it.">
       </div>
       <div class="medium-6 columns medium-pull-6">
-        <h2>The Channel</h2>
+        <h2><strong>The Channel</strong></h2>
         <p>
           My youtube channel, <a href="https://www.youtube.com/@darn_tyler" target="_blank">Darn Tyler</a>, is among the most influential 
           and powerful in the world. My reach is potent. My strength is 
@@ -82,6 +83,54 @@
 
     <div class="row column">
       <ul class="vertical medium-horizontal menu expanded text-center">
+      </ul>
+    </div>
+
+     <div class="row">
+      <div class="medium-6 columns medium-push-6">
+        <img class="thumbnail pm_image"
+          src="pictures/bean1.jpg" alt="A picture of Bean.">
+      </div>
+      <div class="medium-6 columns medium-pull-6">
+        <h2><strong>The Dog</strong></h2>
+        <p>
+          This is my dog, Bean. I love him.
+        </p>
+
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="medium-4 columns">
+        <h3>The Puppy</h3>
+        <p>
+          I got Bean in 2020 just before the pandemic started. It would
+          have been much worse without him.
+        </p>
+      </div>
+      <div class="medium-4 columns">
+        <h3>The Time</h3>
+        <p>
+          Bean and I go for walks anytime I am back in my hometown. He loves
+          being pet and scratched, playing with toys, or just spending 
+          quality time together. He likes to tan with me and would sit next
+          to me when I used to workout at my home gym.
+        </p>
+      </div>
+      <div class="medium-4 columns">
+        <h3>The Friend</h3>
+        <p>
+          Since I got him, Bean has been my best friend. Every time I go
+          home, he is there waiting for me and he jumps and screams when
+          I open the door. I love him and the adventures we go on together.
+        </p>
+      </div>
+    </div>
+
+    <hr>
+
+    <div class="row column">
+      <ul class="vertical medium-horizontal menu expanded text-center">
         <li>
           <a href="#"><div class="stat">12/29/03</div><span>Date of Birth</span></a>
         </li>
@@ -103,27 +152,27 @@
     <div class="row medium-up-3 ">
       <div class="column">
         <img class="thumbnail"
-          src="https://s3.amazonaws.com/agilephd/damagelist.png">
+          src="pictures/1.gif" alt="Rodents Attacking the Camera" height="768" width="1024" aspect-ratio="4/3">
       </div>
       <div class="column">
         <img class="thumbnail"
-          src="https://s3.amazonaws.com/agilephd/health_engagements.png">
+          src="pictures/2.gif" alt="Man Destroys Everything" height="768" width="1024" aspect-ratio="4/3">
       </div>
       <div class="column">
         <img class="thumbnail"
-          src="https://s3.amazonaws.com/agilephd/animalminder_2.jpg">
+          src="pictures/3.gif" alt="Cat" height="768" width="1024" aspect-ratio="4/3">
       </div>
       <div class="column">
         <img class="thumbnail"
-          src="https://s3.amazonaws.com/agilephd/sabot_solutions.png">
+          src="pictures/4.gif" alt="Radical Skeleton" height="768" width="1024" aspect-ratio="4/3">
       </div>
       <div class="column">
         <img class="thumbnail"
-          src="https://s3.amazonaws.com/agilephd/sicklewell.png">
+          src="pictures/5.gif" alt="Infuriated Skeleton Pointing at YOU" height="768" width="1024" aspect-ratio="4/3">
       </div>
       <div class="column">
         <img class="thumbnail"
-          src="https://s3.amazonaws.com/agilephd/rails_girls.png">
+          src="pictures/6.gif" alt="Skeleton Feeling the Power" height="768" width="1024" aspect-ratio="4/3">
       </div>
 
     </div>
@@ -131,29 +180,29 @@
     <hr>
 
     <div class="row column">
-      <h3>Recent Mobile Apps</h3>
+      <h3>This section be changed soon. For now, enjoy this image.</h3>
     </div>
 
     <div class="row small-up-2 medium-up-5 ">
       <div class="column">
         <img class="thumbnail"
-          src="https://s3.amazonaws.com/agilephd/damagelist_ios_3.jpg">
+          src="pictures/tempapp.jpg" alt="Temporary Picture">
       </div>
       <div class="column">
         <img class="thumbnail"
-          src="https://s3.amazonaws.com/agilephd/btr_crime.jpeg">
+          src="pictures/tempapp.jpg" alt="Temporary Picture">
       </div>
       <div class="column">
         <img class="thumbnail"
-          src="https://s3.amazonaws.com/agilephd/seattle_crime.jpeg">
+          src="pictures/tempapp.jpg" alt="Temporary Picture">
       </div>
       <div class="column">
         <img class="thumbnail"
-          src="https://s3.amazonaws.com/agilephd/sfo_crime.jpeg">
+          src="pictures/tempapp.jpg" alt="Temporary Picture">
       </div>
       <div class="column">
         <img class="thumbnail"
-          src="https://s3.amazonaws.com/agilephd/sicklewell_ios.png">
+          src="pictures/tempapp.jpg" alt="Temporary Picture">
       </div>
 
     </div>
@@ -164,13 +213,13 @@
       <ul class="menu">
 
         <li>
-          <a href="https://www.linkedin.com/in/jdavisphd/" class="" target="_blank">
-            <img src="https://s3.amazonaws.com/agilephd/webicon-linkedin-m.png">
+          <a href="https://www.youtube.com/@darn_tyler" class="" target="_blank">
+            <img src="pictures/logo1.png">
           </a>
         </li>
         <li>
-          <a href="https://github.com/cavalryjim" class="" target="_blank">
-            <img src="https://s3.amazonaws.com/agilephd/webicon-github-m.png">
+          <a href="https://www.instagram.com/darn_tyler/" class="" target="_blank">
+            <img src="pictures/logo2.png">
           </a>
         </li>
       </ul>
