minor spelling and grammar fixes

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           -No Idea.<br>
           If you want a video about a microwave, watch <a href="https://youtu.be/msGdpZL0B1Y?feature=shared" target="_blank">I got a microwave</a>.<br>
           Looking for a AAAAA film? Look no further than <a href="https://youtu.be/Q_S610niTRg?feature=shared" target="_blank">Thief</a>.<br>
-          Christmas special that also prooves that the Earth is flat?
+          Christmas special that also proves that the Earth is flat?
           <a href="https://youtu.be/EiUL7hooOcE?feature=shared" target="_blank">Tryanno-Silver</a>. The video. Watch it.
         </p>
       </div>
@@ -180,7 +180,7 @@
     <hr>
 
     <div class="row column">
-      <h3>This section be changed soon. For now, enjoy this image.</h3>
+      <h3>This section will be changed soon. For now, enjoy this image.</h3>
     </div>
 
     <div class="row small-up-2 medium-up-5 ">
