made the format much worse. other minor graphical changes

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
     <div class="top-bar">
       <div class="top-bar-left">
         <ul class="menu">
-          <li class="menu-text agilephd">Welcome to my lair...</li>
+          <li class="menu-text agilephd" style="background-color:#330000" id="topthing">Welcome to my lair...</li>
         </ul>
       </div>
       <div class="top-bar-right">
         <ul class="menu">
-          <li><a data-open="contactModal">Contact me!</a></li>
+          <li><a data-open="contactModal" style="background-color:#330000">Contact me!</a></li>
         </ul>
       </div>
     </div>
@@ -235,6 +235,7 @@
           </a>
         </li>
         <li><a href="tel:+19855193559">+1.985.519.3559</a></li>
+        <li>There are more links at the bottom.</li>
       </ul>
       <button class="close-button" data-close aria-label="Close modal" type="button">
         <span aria-hidden="true">&times;</span>
