added a new section for music that will be finished later

--- a/index.html
+++ b/index.html
@@ -130,6 +130,49 @@
     <hr>
 
     <div class="row column">
+        <ul class="vertical medium-horizontal menu expanded text-center">
+        </ul>
+      </div>
+  
+       <div class="row">
+        <div class="medium-6 columns medium-push-6">
+          <img class="thumbnail pm_image"
+            src="pictures/pineapple.jpg" alt="Pineapple">
+        </div>
+        <div class="medium-6 columns medium-pull-6">
+          <h2><strong>The Music</strong></h2>
+          <p>
+            I will make this section soon. I am very busy and there is a 
+            hurricane outside. The pineapple is a placeholder.
+          </p>
+  
+        </div>
+      </div>
+  
+      <div class="row">
+        <div class="medium-4 columns">
+          <h3>The Metal</h3>
+          <p>
+            Placeholder text. I like metal.
+          </p>
+        </div>
+        <div class="medium-4 columns">
+          <h3>The Grunge</h3>
+          <p>
+            Placeholder text. I like grunge.
+          </p>
+        </div>
+        <div class="medium-4 columns">
+          <h3>The Rest</h3>
+          <p>
+            Placeholder text. I like Radiohead.
+          </p>
+        </div>
+      </div>
+  
+      <hr>
+
+    <div class="row column">
       <ul class="vertical medium-horizontal menu expanded text-center">
         <li>
           <a href="#"><div class="stat">12/29/03</div><span>Date of Birth</span></a>
@@ -222,6 +265,11 @@
             <img src="pictures/logo2.png">
           </a>
         </li>
+        <li>
+            <a href="https://open.spotify.com/user/pwwtv088o6rvwsuh2452c82xh" class="" target="_blank">
+              <img src="pictures/logo3.png">
+            </a>
+          </li>
       </ul>
     </div>
 
