Added links to future sections at the bottom

--- a/index.html
+++ b/index.html
@@ -223,29 +223,32 @@
     <hr>
 
     <div class="row column">
-      <h3>This section will be changed soon. For now, enjoy this image.</h3>
+      <h3>Some links to texts and media I want to share. (Under construction)</h3>
     </div>
 
     <div class="row small-up-2 medium-up-5 ">
       <div class="column">
+        <a href="blog.html">
         <img class="thumbnail"
-          src="pictures/tempapp.jpg" alt="Temporary Picture">
+          src="pictures/sec01.jpg" alt="Link to my blog"></a>
+      </div>
+      <div class="column">
+        <a href="thoughts.html">
+        <img class="thumbnail"
+          src="pictures/sec02.jpg" alt="Link to my thoughts on things"></a>
       </div>
       <div class="column">
         <img class="thumbnail"
-          src="pictures/tempapp.jpg" alt="Temporary Picture">
+          src="pictures/tempapp2.jpg" alt="Temporary Picture">
       </div>
       <div class="column">
         <img class="thumbnail"
-          src="pictures/tempapp.jpg" alt="Temporary Picture">
+          src="pictures/tempapp2.jpg" alt="Temporary Picture">
       </div>
       <div class="column">
+        <a href="bean.html">
         <img class="thumbnail"
-          src="pictures/tempapp.jpg" alt="Temporary Picture">
-      </div>
-      <div class="column">
-        <img class="thumbnail"
-          src="pictures/tempapp.jpg" alt="Temporary Picture">
+          src="pictures/sec05.jpg" alt="Link to pictures of Bean"></a>
       </div>
 
     </div>
