Added section for music, more gifs, and more social links

--- a/index.html
+++ b/index.html
@@ -137,13 +137,15 @@
        <div class="row">
         <div class="medium-6 columns medium-push-6">
           <img class="thumbnail pm_image"
-            src="pictures/pineapple.jpg" alt="Pineapple">
+            src="pictures/thom1.jpg" alt="Thom Yorke">
         </div>
         <div class="medium-6 columns medium-pull-6">
           <h2><strong>The Music</strong></h2>
           <p>
-            I will make this section soon. I am very busy and there is a 
-            hurricane outside. The pineapple is a placeholder.
+            I have a diverse interest in music. My tastes surpass those of the 
+            average man, as do my muscles and intellect. More information about
+            my views on particular bands can be found <a href=thoughts.html>here</a> or at the bottom of 
+            the page in the "The Thoughts" section.
           </p>
   
         </div>
@@ -153,19 +155,24 @@
         <div class="medium-4 columns">
           <h3>The Metal</h3>
           <p>
-            Placeholder text. I like metal.
+            I like the most vicious, extreme, hardcore metal bands out there. 
+            Whether it's Evanescence, Limp Bizkit, Acid Bath, Pantera, System
+            of a Down, White Zombie, Linkin Park, Elvis, or any other obscure
+            destruction radical explosion, you can catch me rocking out! 
+            *devil horns* BOOYAHHHHHHHHHHHHHHHH
           </p>
         </div>
         <div class="medium-4 columns">
           <h3>The Grunge</h3>
           <p>
-            Placeholder text. I like grunge.
+            Alice in Chains is perfect. The rest are pretty mid. 
           </p>
         </div>
         <div class="medium-4 columns">
           <h3>The Rest</h3>
           <p>
-            Placeholder text. I like Radiohead.
+            I really like Radiohead for some reason. I also like classical
+            and stuff.
           </p>
         </div>
       </div>
@@ -217,6 +224,18 @@
         <img class="thumbnail"
           src="pictures/6.gif" alt="Skeleton Feeling the Power" height="768" width="1024" aspect-ratio="4/3">
       </div>
+      <div class="column">
+        <img class="thumbnail"
+          src="pictures/7.gif" alt="Me at Rouse&#39;s" height="768" width="1024" aspect-ratio="4/3">
+      </div>
+      <div class="column">
+        <img class="thumbnail"
+          src="pictures/8.gif" alt="Me at AITP" height="768" width="1024" aspect-ratio="4/3">
+      </div>
+      <div class="column">
+        <img class="thumbnail"
+          src="pictures/9.gif" alt="Man Falling Over in Chair" height="768" width="1024" aspect-ratio="4/3">
+      </div>
 
     </div>
 
@@ -233,7 +252,7 @@
           src="pictures/sec01.jpg" alt="Link to my blog"></a>
       </div>
       <div class="column">
-        <a href="thoughts.html">
+        <a href="thoughts.html"> 
         <img class="thumbnail"
           src="pictures/sec02.jpg" alt="Link to my thoughts on things"></a>
       </div>
@@ -260,19 +279,29 @@
 
         <li>
           <a href="https://www.youtube.com/@darn_tyler" class="" target="_blank">
-            <img src="pictures/logo1.png">
+            <img src="pictures/logo1.png" alt="Youtube Link">
           </a>
         </li>
         <li>
           <a href="https://www.instagram.com/darn_tyler/" class="" target="_blank">
-            <img src="pictures/logo2.png">
+            <img src="pictures/logo2.png" alt="Instagram Link">
           </a>
         </li>
         <li>
             <a href="https://open.spotify.com/user/pwwtv088o6rvwsuh2452c82xh" class="" target="_blank">
-              <img src="pictures/logo3.png">
+              <img src="pictures/logo3.png" alt="Spotify Link">
             </a>
-          </li>
+        </li>
+        <li>
+          <a href="https://x.com/darn_tyler" class="" target="_blank">
+            <img src="pictures/logo5.png" alt="X, formerly Twitter Link">
+          </a>
+        </li>
+        <li>
+          <a href="https://steamcommunity.com/profiles/76561198293688586/" class="" target="_blank">
+            <img src="pictures/logo6.png" alt="Steam Link">
+          </a>
+        </li>
       </ul>
     </div>
 
