added same format to bottom links

--- a/thoughts.html
+++ b/thoughts.html
@@ -1,9 +1,19 @@
 <!DOCTYPE html>
 <html>
-<body>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>TL - Thoughts</title>
+        <link rel="icon" href="pictures/mesmall.png" type="image/png">
+        <link rel="stylesheet"
+          href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
+        <link rel="stylesheet" href="centerphoto.css">
+        <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+      </head>
+    <body>
 
-<h1>Under construction</h1>
-<p>Like I said. Read.</p>
+    <h1>Under construction</h1>
+    <p>Like I said. Read.</p>
 
-</body>
+    </body>
 </html>
