made the fonts even worse again

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
       href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
     <link rel="stylesheet" href="index.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Comic Neue' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Open Sans' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Playpen Sans' rel='stylesheet'>
   </head>
   <body>
 
@@ -182,13 +185,13 @@
     <div class="row column">
       <ul class="vertical medium-horizontal menu expanded text-center">
         <li>
-          <a href="#"><div class="stat">12/29/03</div><span>Date of Birth</span></a>
+          <a href="#"><div class="stat" id="riddlethree">12/29/03</div><span id="riddlethree">Date of Birth</span></a>
         </li>
         <li>
-          <a href="#"><div class="stat">7/28/42</div><span>Random Date</span></a>
+          <a href="#"><div class="stat" id="riddlethree">7/28/42</div><span id="riddlethree">Random Date</span></a>
         </li>
         <li>
-          <a href="#"><div class="stat">9/10/24</div><span>When I found out how to make this website work</span></a>
+          <a href="#"><div class="stat" id="riddlethree">9/10/24</div><span id="riddlethree">When I found out how to make this website work</span></a>
         </li>
       </ul>
     </div>
@@ -196,7 +199,7 @@
     <hr>
 
     <div class="row column">
-      <h3>Some Cool Gifs</h3>
+      <h3 id="epicgifs">Some Cool Gifs</h3>
     </div>
 
     <div class="row medium-up-3 ">
