Made the backgrounds cooler

--- a/index.html
+++ b/index.html
@@ -204,40 +204,52 @@
 
     <div class="row medium-up-3 ">
       <div class="column">
-        <img class="thumbnail"
-          src="pictures/1.gif" alt="Rodents Attacking the Camera" height="768" width="1024" aspect-ratio="4/3">
+        <img class="thumbnail epicgifs"
+          src="pictures/1.gif" alt="Rodents Attacking the Camera">
       </div>
       <div class="column">
-        <img class="thumbnail"
-          src="pictures/2.gif" alt="Man Destroys Everything" height="768" width="1024" aspect-ratio="4/3">
+        <img class="thumbnail epicgifs"
+          src="pictures/2.gif" alt="Man Destroys Everything">
       </div>
       <div class="column">
-        <img class="thumbnail"
-          src="pictures/3.gif" alt="Cat" height="768" width="1024" aspect-ratio="4/3">
+        <img class="thumbnail epicgifs"
+          src="pictures/3.gif" alt="Cat">
       </div>
       <div class="column">
-        <img class="thumbnail"
-          src="pictures/4.gif" alt="Radical Skeleton" height="768" width="1024" aspect-ratio="4/3">
+        <img class="thumbnail epicgifs2"
+          src="pictures/4.gif" alt="Radical Skeleton">
       </div>
       <div class="column">
-        <img class="thumbnail"
-          src="pictures/5.gif" alt="Infuriated Skeleton Pointing at YOU" height="768" width="1024" aspect-ratio="4/3">
+        <img class="thumbnail epicgifs2"
+          src="pictures/5.gif" alt="Infuriated Skeleton Pointing at YOU">
       </div>
       <div class="column">
-        <img class="thumbnail"
-          src="pictures/6.gif" alt="Skeleton Feeling the Power" height="768" width="1024" aspect-ratio="4/3">
+        <img class="thumbnail epicgifs2"
+          src="pictures/6.gif" alt="Skeleton Feeling the Power">
       </div>
       <div class="column">
-        <img class="thumbnail"
-          src="pictures/7.gif" alt="Me at Rouse&#39;s" height="768" width="1024" aspect-ratio="4/3">
+        <img class="thumbnail epicgifs"
+          src="pictures/7.gif" alt="Me at Rouse&#39;s">
       </div>
       <div class="column">
-        <img class="thumbnail"
-          src="pictures/8.gif" alt="Me at AITP" height="768" width="1024" aspect-ratio="4/3">
+        <img class="thumbnail epicgifs"
+          src="pictures/8.gif" alt="Me at AITP">
       </div>
       <div class="column">
-        <img class="thumbnail"
-          src="pictures/9.gif" alt="Man Falling Over in Chair" height="768" width="1024" aspect-ratio="4/3">
+        <img class="thumbnail epicgifs"
+          src="pictures/9.gif" alt="Man Falling Over in Chair">
+      </div>
+      <div class="column">
+        <img class="thumbnail epicgifs2"
+          src="pictures/10.gif" alt="Epic Floating Skull">
+      </div>
+      <div class="column">
+        <img class="thumbnail epicgifs2"
+          src="pictures/11.gif" alt="Mary Skeleton">
+      </div>
+      <div class="column">
+        <img class="thumbnail epicgifs2"
+          src="pictures/12.gif" alt="Glowing Skeleton">
       </div>
 
     </div>
