--- a/thoughts.html
+++ b/thoughts.html
@@ -7,7 +7,7 @@
         <link rel="icon" href="pictures/mesmall.png" type="image/png">
         <link rel="stylesheet"
           href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="thoughts.css">
         <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
       </head>
     <body>
