added even more gifs and shadow on text

--- a/index.html
+++ b/index.html
@@ -251,6 +251,18 @@
         <img class="thumbnail epicgifs2"
           src="pictures/12.gif" alt="Glowing Skeleton">
       </div>
+      <div class="column">
+        <img class="thumbnail epicgifs"
+          src="pictures/13.gif" alt="Evil Dog">
+      </div>
+      <div class="column">
+        <img class="thumbnail epicgifs"
+          src="pictures/14.gif" alt="The Attack">
+      </div>
+      <div class="column">
+        <img class="thumbnail epicgifs"
+          src="pictures/15.gif" alt="My House">
+      </div>
 
     </div>
 
@@ -273,11 +285,11 @@
       </div>
       <div class="column">
         <img class="thumbnail"
-          src="pictures/tempapp2.jpg" alt="Temporary Picture">
+          src="pictures/sec03.jpg" alt="Temporary Picture">
       </div>
       <div class="column">
         <img class="thumbnail"
-          src="pictures/tempapp2.jpg" alt="Temporary Picture">
+          src="pictures/sec04.jpg" alt="Temporary Picture">
       </div>
       <div class="column">
         <a href="bean.html">
