more gifs and headers for bottom links

--- a/blog.html
+++ b/blog.html
@@ -8,9 +8,14 @@
         <link rel="stylesheet"
           href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
         <link rel="stylesheet" href="blog.css">
-        <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Varela Round" rel="stylesheet">
       </head>
     <body>
+
+    <a href="index.html" class="backbutton">Go to Home</a>
+    <header class="mainheader">the blog</header>
+
+    <hr>
 
     <h1>Under construction</h1>
     <p>Like I said. Read.</p>
