--- a/thoughts.html
+++ b/thoughts.html
@@ -12,6 +12,11 @@
       </head>
     <body>
 
+    <a href="index.html" class="backbutton">Go to Home</a>
+    <header class="mainheader">the thoughts</header>
+
+    <hr>
+
     <h1>Under construction</h1>
     <p>Like I said. Read.</p>
 
