Added some mobile formatting and changed fonts more

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link href='https://fonts.googleapis.com/css?family=Comic Neue' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Open Sans' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Playpen Sans' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Black Ops One' rel='stylesheet'>
   </head>
   <body>
 
@@ -32,7 +33,7 @@
 
     <div class="callout large scrum">
       <div class="row column text-center bottom">
-        <h1 class="scrum_h1 bottom">Tyler's Lair of Doom, Destruction, and Other Evil Words</h1>
+        <h1 class="scrum_h1 bottom"><strong>Tyler's Lair of Doom, Destruction, and Other Evil Words</strong></h1>
       </div>
     </div>
 
@@ -183,7 +184,7 @@
       <hr>
 
     <div class="row column">
-      <ul class="vertical medium-horizontal menu expanded text-center">
+      <ul class="vertical medium-horizontal menu expanded text-center numberswag">
         <li>
           <a href="#"><div class="stat" id="riddlethree">12/29/03</div><span id="riddlethree">Date of Birth</span></a>
         </li>
@@ -198,11 +199,13 @@
 
     <hr>
 
-    <div class="row column">
-      <h3 id="epicgifs">Some Cool Gifs</h3>
+    
+    <div class="row column" id="containerofsorts">
+      <img src="pictures/fire.gif" alt="Epic Flame" class="firegif">
+      <h3 id="epicgifs">SOME COOL GIFS</h3>
     </div>
 
-    <div class="row medium-up-3 ">
+    <div class="row medium-up-3 grid-container">
       <div class="column">
         <img class="thumbnail epicgifs"
           src="pictures/1.gif" alt="Rodents Attacking the Camera">
@@ -275,25 +278,25 @@
     <div class="row small-up-2 medium-up-5 ">
       <div class="column">
         <a href="blog.html">
-        <img class="thumbnail"
+        <img class="thumbnail" id="linx"
           src="pictures/sec01.jpg" alt="Link to my blog"></a>
       </div>
       <div class="column">
         <a href="thoughts.html"> 
-        <img class="thumbnail"
+        <img class="thumbnail" id="linx"
           src="pictures/sec02.jpg" alt="Link to my thoughts on things"></a>
       </div>
       <div class="column">
-        <img class="thumbnail"
+        <img class="thumbnail" id="deleteme"
           src="pictures/sec03.jpg" alt="Temporary Picture">
       </div>
       <div class="column">
-        <img class="thumbnail"
+        <img class="thumbnail" id="deleteme"
           src="pictures/sec04.jpg" alt="Temporary Picture">
       </div>
       <div class="column">
         <a href="bean.html">
-        <img class="thumbnail"
+        <img class="thumbnail" id="linx"
           src="pictures/sec05.jpg" alt="Link to pictures of Bean"></a>
       </div>
 
@@ -303,7 +306,6 @@
 
     <div class="row column">
       <ul class="menu">
-
         <li>
           <a href="https://www.youtube.com/@darn_tyler" class="" target="_blank">
             <img src="pictures/logo1.png" alt="Youtube Link">
